--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,5 +31,14 @@
         android:text="@string/design"
         app:layout_constraintTop_toBottomOf="@id/tv" />
 
+    <TextView
+        android:id="@+id/exception_thread"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="@string/thread"
+        app:layout_constraintTop_toBottomOf="@+id/desgin_mode"
+        tools:layout_editor_absoluteX="7dp" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
