--- a/app/src/main/res/layout/livedata_layout.xml
+++ b/app/src/main/res/layout/livedata_layout.xml
@@ -1,30 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".navigation.fragments.FragmentMain">
+    android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/fragment_main"
+        android:id="@+id/livedata"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/fragment_main"
+        android:text="@string/livedata"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 
-    <FrameLayout
-        android:id="@+id/frame_layout"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+    <TextView
+        android:id="@+id/mediatorLiveData"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/MediatorLiveData"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragment_main"
-        app:layout_constraintVertical_bias="0.498" />
-
+        app:layout_constraintTop_toBottomOf="@+id/livedata" />
 </androidx.constraintlayout.widget.ConstraintLayout>
