--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -86,4 +86,16 @@
         app:layout_constraintTop_toBottomOf="@+id/lifecycle"
         app:layout_constraintVertical_bias="0.12" />
 
+
+    <TextView
+        android:id="@+id/reflect"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/reflect"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lifecycle"
+        app:layout_constraintVertical_bias="0.271" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
